# android-VPN

./: .gitignore  README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/example/vpntest/: ExampleInstrumentedTest.kt
app/src/main/assets/: hev-tunnel-config-template.yaml
app/src/main/cpp/: CMakeLists.txt  hev-tunnel-jni.cpp  native-lib.cpp
app/src/main/java/com/example/vpntest/: MainActivity.kt  NativeBridge.kt  ZyxelVpnService.kt
app/src/main/java/com/example/vpntest/core/: DefaultConnectionRouter.kt  DefaultSessionManager.kt  VpnInterfaces.kt  VpnPacketProcessor.kt  VpnSession.kt
app/src/main/java/com/example/vpntest/hev/: ConfigManager.kt  HevConfig.kt  HevIntegrationTest.kt  HevTunnelManager.kt  TunnelMonitor.kt
app/src/main/java/com/example/vpntest/migration/: MigrationFlags.kt
app/src/main/java/com/example/vpntest/network/: VpnNetworkManager.kt
app/src/main/java/com/example/vpntest/protocols/: TcpHandler.kt
app/src/main/java/com/example/vpntest/proxy/: Socks5Proxy.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/vpntest/: ExampleUnitTest.kt
docs/: ARCHITECTURE_DESIGN_PATTERNS_ANALYSIS.md  DEPLOYMENT_GUIDE.md  HEV_TUN2SOCKS_MIGRATION.md  MIGRATION_PLAN.md  NETWORK_ARCHITECTURE_AND_DATA_FLOW_ANALYSIS.md  OFFICIAL_HEV_MIGRATION_ARCHITECTURE.md  PHASE1_INFRASTRUCTURE_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_FINAL_SUMMARY.md  TROUBLESHOOTING.md
gradle/wrapper/: gradle-wrapper.properties
